# ChangeLog for x11-themes/gtk-engines-qt
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qt/ChangeLog,v 1.37 2008/07/28 21:57:04 carlo Exp $

  28 Jul 2008; Carsten Lohrke <carlo@gentoo.org> gtk-engines-qt-0.8.ebuild:
  QA: Get rid of deprecated qt_min_version().

  06 Jul 2008; Friedrich Oslage <bluebird@gentoo.org>
  gtk-engines-qt-0.8-r1.ebuild:
  Stable on sparc, thanks to Tiago Cunha for testing, bug #224879

  02 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
  gtk-engines-qt-0.8-r1.ebuild:
  stable amd64, bug 224879

  30 Jun 2008; nixnut <nixnut@gentoo.org> gtk-engines-qt-0.8-r1.ebuild:
  Stable on ppc wrt bug 224879

  29 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  gtk-engines-qt-0.8-r1.ebuild:
  stable x86, bug 224879

  29 Jun 2008; Markus Rothe <corsair@gentoo.org>
  gtk-engines-qt-0.8-r1.ebuild:
  Stable on ppc64; bug #224879

  27 May 2008; Mark Loeser <halcy0n@gentoo.org> gtk-engines-qt-0.8.ebuild:
  Remove RDEPEND on cmake; bug #220453

*gtk-engines-qt-0.8-r1 (19 May 2008)

  19 May 2008; Carsten Lohrke <carlo@gentoo.org>
  +files/gtk-engines-qt-0.8-konq-flash.patch, +gtk-engines-qt-0.8-r1.ebuild:
  Address bug #220273 and some minor issues.

  19 Jan 2008; Stefan Schweizer <genstef@gentoo.org>
  gtk-engines-qt-0.8.ebuild:
  libbonoboui is not always needed

  19 Jan 2008; Stefan Schweizer <genstef@gentoo.org>
  -gtk-engines-qt-0.7_p20070327-r2.ebuild, gtk-engines-qt-0.8.ebuild:
  remove old and add libbonoboui depend thanks to betelgeuse, bug 206568

  08 Jan 2008; Raúl Porcel <armin76@gentoo.org> gtk-engines-qt-0.8.ebuild:
  sparc stable wrt #202662

  30 Dec 2007; Samuli Suominen <drac@gentoo.org> gtk-engines-qt-0.8.ebuild:
  amd64 stable wrt #202662

  24 Dec 2007; Brent Baude <ranger@gentoo.org> gtk-engines-qt-0.8.ebuild:
  Marking gtk-engines-qt-0.8 ppc64 for bug 202662

  22 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>