@@ -1,6 +1,7 @@
 AUX gtk-engines-qt-0.8-konq-flash.patch 953 RMD160 9f7e840d577a3db28d31f2cb94cc114138e51e54 SHA1 2cff12bc4aebca210ac5e05aa8f98520c0c22c98 SHA256 cc39a430b167f9ac5d54c2629e80985fa099702c3cebfe45464f6e395cfbd31a
 DIST gtk-qt-engine-0.8.tar.bz2 59472 RMD160 05a825ff51180ee70a85338a970d40509aae16eb SHA1 0d22143068dda220fd6f4c98a3f750114f282803 SHA256 6658bdbd3f2120d34f5c59b5bc3cfed5ef83a2aa8572d775483aa304396b0d45
 EBUILD gtk-engines-qt-0.8-r1.ebuild 953 RMD160 1ac58225a521df48eb9bd2d9be6ad5a8f6d62a06 SHA1 0dae1deb2f8c732245bb6b007f720479a17b9571 SHA256 2cb89ac95d306a0c000f51fbcb317b88f99346844fda2b8a1cffcdbfebdf2af4
+EBUILD gtk-engines-qt-0.8-r2.ebuild 1287 RMD160 231f0b4b42c9d476ad2859576ec4e63b5b17b8f5 SHA1 dfbcd5b6eee59138217ff199b0522d15c5682b9f SHA256 bb615f93872c44dd0f70eb2ec67de0c15e69e26804408fd032e21cfb9e930a5c
 EBUILD gtk-engines-qt-0.8.ebuild 830 RMD160 e71e19ea22858f20b52964860ebf940085b91bef SHA1 e8793af15aa7af33cb0531716e8390ea0ecf5733 SHA256 0288af99afe667994898d24fbb238376de3c57eacb5374582eef4c18b0e83804
-MISC ChangeLog 7600 RMD160 02022388b9736b9ab135a6de81cc7ceaee4dace3 SHA1 510bb6495a5f836d2eb9e70929123d3470cd2ec1 SHA256 e0daa191d045d358fb5ae852624319a3d2869c979046dfa9b5245d9bbcc036eb
+MISC ChangeLog 7803 RMD160 da5ba620febdcae7cc45666297dc20d4be19aef1 SHA1 1852fed4c4f7ae906fbcaca6968b5a8447c6ac69 SHA256 dfcfb41ee7a4a5c1729e6173ae8fb36111a1b3d87e0e8335bf9c4659bc8e47de
 MISC metadata.xml 223 RMD160 7429359358271402627b1b14eefee1114caa1154 SHA1 0e14ab85bd427902302b78e7e3cd74f602f74a5f SHA256 17048562e880070e1742f7570a13b4e9539b8ae86363be0f2f9f43e1c7265676
