@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/gtk-engines-qt
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qt/ChangeLog,v 1.37 2008/07/28 21:57:04 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qt/ChangeLog,v 1.38 2008/08/09 22:18:48 wormo Exp $
+
+*gtk-engines-qt-0.8-r2 (10 Aug 2008)
+
+  10 Aug 2008; Stephanie Lockwood-Childs <wormo@gentoo.org>
+  +gtk-engines-qt-0.8-r2.ebuild:
+  support LINGUAS to only install requested translations (bug #205940)
 
   28 Jul 2008; Carsten Lohrke <carlo@gentoo.org> gtk-engines-qt-0.8.ebuild:
   QA: Get rid of deprecated qt_min_version().
